src/components/Artwork.scss
@use 'sass:math';

:root {
  --artwork-size: 16vw;
  --artwork-selected-scale: 1.6;
}

.artwork {
  @include animations.use(
    (
      name: artwork-appears,
      duration: var(--easing),
      easing: var(--easing-ease-back),
      fill-mode: backwards
    ),
    animations.$float,
  );

  --animation-float-amount: 2%;

  position: relative;
  width: var(--artwork-size);
  height: var(--artwork-size);
  animation-composition: add;

  &__wrapper {
    @include easing(transform, var(--easing-fast), var(--easing-ease-back));

    position: absolute;
    inset: 0;

    // Sphere color
    &::before {
      content: '';
      position: absolute;
      inset: 0;
      border-radius: 100%;
      box-shadow: inset 0 0 calc(var(--artwork-size) * 0.1) var(--color);
    }

    // Sphere shadows
    &::after {
      @include sphere-shadows;
      content: '';
    }
  }

  &.is-selected &__wrapper {
    transform: scale(var(--artwork-selected-scale));
  }

  img {
    @include easing((transform, box-shadow));
    width: 100%;
    height: 100%;

    background: var(--color);
    border-radius: 100%;
    box-shadow: var(--box-shadow) var(--color);

    // TODO[next] add a focus-crop position
    object-fit: cover;
  }

  &.is-selected img {
    box-shadow: 0 0 10vw var(--color);
  }

  &__tags {
    position: absolute;
    inset: 0;
  }

  &__tag {
    @include font('ui');
    @include animations.use(
      (
        name: artwork-tag-orbitates,
        duration: 10s,
        easing: ease-in-out,
        iteration-count: infinite,
        stagger: (
          delay: calc(1s - 10s * var(--seed)),
          length: 20
        )
      )
    );

    --artwork-tag-orbit-angle: calc(45deg * var(--seed));
    --artwork-tag-orbit-radius: calc((10% + 50%) * cos(var(--artwork-tag-orbit-angle)) + var(--artwork-size) / 2);

    position: absolute;
    top: 50%;
    left: 50%;

    width: min-content;
    max-width: 20ch;
    padding: 0.3em 0.5em;
    overflow: hidden;

    color: var(--ui-color-text);
    text-overflow: ellipsis;
    text-transform: lowercase;
    white-space: nowrap;

    background: var(--color);
    border-radius: var(--border-radius);
    transform: translateX(-50%) translateY(-50%);
    box-shadow: var(--box-shadow) var(--color);

    animation-composition: add, accumulate;

    &:empty { display: none; }

    &:has(svg) {
      width: 2em;
      height: 2em;
      border-radius: 100%;

      svg {
        $gutter: 0.5em;
        position: absolute;
        inset: $gutter;
        width: calc(100% - $gutter * 2);
        height: auto;
        stroke-width: 2px;
      }
    }
  }
}

@keyframes artwork-appears {
  from { transform: scale(0); }
  to { transform: none; }
}

@keyframes artwork-tag-orbitates {
  0% {
    z-index: 1;
    transform:
      rotate(var(--artwork-tag-orbit-angle))
      translateX(calc(-1 * var(--artwork-tag-orbit-radius)))
      // translateY(calc(-1 * var(--artwork-tag-orbit-radius)))
      rotate(calc(-1 * var(--artwork-tag-orbit-angle)))
    ;
  }

  50% {
    z-index: 1;
    transform:
      rotate(var(--artwork-tag-orbit-angle))
      translateX(var(--artwork-tag-orbit-radius))
      // translateY(var(--artwork-tag-orbit-radius))
      rotate(calc(-1 * var(--artwork-tag-orbit-angle)))
    ;
  }

  51% {
    z-index: -1;
  }

  100% {
    z-index: -1;
    transform:
      rotate(var(--artwork-tag-orbit-angle))
      translateX(calc(-1 * var(--artwork-tag-orbit-radius)))
      // translateY(calc(-1 * var(--artwork-tag-orbit-radius)))
      rotate(calc(-1 * var(--artwork-tag-orbit-angle)))
    ;
  }
}

